0.1733
    - select method where_param option is DEPRECATED!
      use where => [STRING, PARAM] syntax instead
    - delete method where_param option is DEPRECATED!
      use where => [STRING, PARAM] syntax instead
    - update method where_param option is DEPRECATED!
      use where => [STRING, PARAM] syntax instead
    - update method param option is DEPRECATED!
    - insert method param option is DEPRECATED!
    - removed argument checking logic because in database performance is more
      important.
0.1732
    - removed EXPERIMETNAL flag from like_value
0.1731
    - removed DEPRECATED status from insert method's id option
    - renamed EXPERIMENTAL insert_or_update to update_or_insert
0.1730
    - added EXPERIMENTAL insert_or_update method
    - method method of DBIx::Custom::Model is renamed to helper,
      method is DEPRECATED!
    - method method is renamed to helper, method is DEPRECATED!
    - insert method's id option is DEPRECATED!
    - fixed id option bug when column name is anbiguous
0.1729
    - dbi_option attribute is renamed to option, dbi_option is DEPRECATED!
    - default_dbi_option is renamed to default_option, default_dbi_option
      is DEPRECATED!
0.1728
    - added {key => ..., value => ...} syntax to DBIx::Custom::Mapper map method
      ,and argument of string and code reference is DEPRECATED!
    - update_param is DEPRECATED, use assing_clause instead.
    - assing_param is renamed to assing_clause, assing_param is DEPRECATED!
    - insert_param is renamed to values_clause, insert_param is DEPRECATED!
0.1727
    - improved join clause parsing
0.1726
    - improved join clause parsing
0.1725
    - improved join clause parsing
0.1724
    - added EXPERIMENTAL like_value method to DBIx::Custom
    - sqlfilter option is renamed to after_build_sql, sqlfilter is DEPRECATED!
    - removed EXPERIMENTAL flag from DBIx::Custom::Mapper
    - removed EXPERIMENTAL flag from the following DBIx::Custom methods